@@ -1,29 +1,26 @@
 {
   "preprocess_hic.sample_id": "imr90-rep2",
-  "preprocess_hic.r1_fastq": "test_data/hic/imr90_small/SRR1658675_1.small.fastq.gz,test_data/hic/imr90_small/SRR1658676_1.small.fastq.gz",
-  "preprocess_hic.r2_fastq": "test_data/hic/imr90_small/SRR1658675_2.small.fastq.gz,test_data/hic/imr90_small/SRR1658676_2.small.fastq.gz",
+  "preprocess_hic.r1_fastq": "/Users/maryee/Dropbox/projects/topology_tools/test_data/hic/imr90_small/SRR1658675_1.small.fastq.gz,/Users/maryee/Dropbox/projects/topology_tools/test_data/hic/imr90_small/SRR1658676_1.small.fastq.gz",
+  "preprocess_hic.r2_fastq": "/Users/maryee/Dropbox/projects/topology_tools/test_data/hic/imr90_small/SRR1658675_2.small.fastq.gz,/Users/maryee/Dropbox/projects/topology_tools/test_data/hic/imr90_small/SRR1658676_2.small.fastq.gz",
+
+  "preprocess_hic.num_reads_per_chunk": 150000,
 
   "preprocess_hic.monitoring_script": "Docker/monitor.sh",
+  "preprocess_hic.genome_id": "hg38",
   "preprocess_hic.genome_size": "chrom_grch38.sizes",
 
   "preprocess_hic.hicpro_align.genome_index_tgz": "test_data/bowtie2_index/hs_small_bt2.tar.gz",
+
   "preprocess_hic.hicpro_align.genome_name": "hs_small",
   "preprocess_hic.hicpro_align.genome_fragment": "Mboi_resfrag_grch38.bed",
   "preprocess_hic.hicpro_align.ligation_site": "GATCGATC",
   "preprocess_hic.hicpro_align.bowtie2_cores": "2",
 
-  "preprocess_hic.hicpro_contact_matrices.bin_size": "1000 2000",
+  "preprocess_hic.bin_size": "10000",
 
   "preprocess_hic.hicpro_align.memory": "16GB",
   "preprocess_hic.hicpro_align.cpu": 2,
-  "preprocess_hic.hicpro_align.disks": "local-disk 100 SSD",
 
   "preprocess_hic.hicpro_align.preemptible": 0
+
 }
-
-
-
-
-
-
-
