@@ -1,8 +1,14 @@
 ## FireCloud
-### preprocess_hic_mboi_hg38
+### preprocess_hic
 
 Snapshot ID 24
     - More accurate fastq file size calculation for many small files
     
 Snapshot ID 25
     - Fix to allow calculation of very small fastq sizes (that use scientific notation)    
+    
+Snapshot ID 26
+    - Added cooler file as output
+
+Snapshot ID 29
+    - Added juicebox .hic as output
